# audio-analytics

./: .env  .env.test  .gitignore  Dockerfile  README.md  docker-compose.kafka.yml  pyproject.toml  pytest.ini
app/: asr_service.py  audio_utils.py  consumer_worker.py  db.py  kafka_producer.py  main.py  models.py  schemas.py
app/services/: stats_service.py  transcription_service.py
tests/: test_consumer_worker.py  test_db.py  test_kafka_producer.py  test_main.py
